Fix some problems on mobile + styling "improvements"

--- a/styles.css
+++ b/styles.css
@@ -9,16 +9,19 @@
     --card-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
 
     --body-bg: #f5f5f5;
-    --default-color: #000000;
+    --default-color: #212427;
 
     --card-bg: white;
     --card-border: white;
 
-    --section-header-fg: #1c8cb7;
+    --section-header-fg: #c84040;
     --main-sub-hover-bg: #f5f5f5;
     --nav-btn-bg: white;
     --nav-btn-border: white;
     --nav-btn-disabled-fg: grey;
+
+    --sidenav-main-bg: #fafafa;
+    --sidenav-main-border: #e3e3e3;
 
     --link-color: #0072ff;
     --link-color-hover: #4498ff;
@@ -52,6 +55,9 @@
         --nav-btn-bg: #3e3e3e;
         --nav-btn-border: #4e4e4e;
         --nav-btn-disabled-fg: grey;
+        
+        --sidenav-main-bg: #363636;
+        --sidenav-main-border: #363636;
 
         --link-color: #5a9ced;
         --link-color-hover: #98c6ff;
@@ -383,6 +389,8 @@ dt > b {
     flex-direction: row;
     margin-left: 560px;
     justify-content: center;
+    max-width: 100%;
+    padding-bottom: 5px;
 }
 .body__main__inner {
     display: flex;
@@ -411,6 +419,10 @@ dt > b {
     overflow: auto;
     flex: 1;
     padding-right: 5px;
+    padding-left: 5px;
+    background-color: var(--sidenav-main-bg);
+    border: 1px solid var(--sidenav-main-border);
+    border-radius: 3px;
 }
 
 .sidenav__main ul {
@@ -418,8 +430,9 @@ dt > b {
 }
 .sidenav__main > ul {
     padding-left: 0;
+    margin-top: 7px;
 }
-.sidenav__main > ul > li {
+.sidenav__main > ul > li:not(:first-child) {
     margin-top: 20px;
 }
 .sidenav__main li {
@@ -493,7 +506,7 @@ dt > b {
 /* Mobile */
 @media screen and (max-width: 800px) {
     :root {
-        padding: 0 10px 10px 10px;
+        padding: 0;
 
         --font-size: 15px;
         --body-width: 100%;
@@ -512,6 +525,9 @@ dt > b {
     }
     .nav__next {
         margin-left: 15px !important;
+    }
+    .section {
+        margin: 10px 0 10px 0 !important;
     }
     .section.top-most {
         margin-top: 20px !important;
